--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="style.css">
+
   <title>Frontend Mentor | Order summary card</title>
- 
+  
 </head>
 <body>
 
