--- a/index.html
+++ b/index.html
@@ -1,35 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
 
   <title>Frontend Mentor | Order summary card</title>
-  
+
 </head>
+
 <body>
+  <main>
+    <picture class="main-img">
+      <img src="images/illustration-hero.svg" alt="girl dancing">
+    </picture>
+    <h1>Order Summary</h1>
+    <div class="description">
+      <p>
+        You can now listen to millions of songs, audiobooks, and podcasts on any
+        device anywhere you like!
+      </p>
+    </div>
+    <div class="annual-plan">
+      <img src="images/icon-music.svg" alt="music icon">
+      <div class="prices">
+        <h2>Annual Plan</h2>
+        <p>$59.99/year</p>
+      </div>
 
-  Order Summary
+      <button>Change</button>
+    </div>
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
-
-  Annual Plan
-  $59.99/year
-
-  Change
-
-  Proceed to Payment
-  Cancel Order
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <button class="payment-button">
+      Proceed to Payment
+    </button>
+    
+    <button class="cancel-button">
+      Cancel Order
+    </button>
+  </main>
 </body>
+
 </html>
