--- a/index.html
+++ b/index.html
@@ -24,30 +24,32 @@
     <picture class="main-img">
       <img src="images/illustration-hero.svg" alt="girl dancing">
     </picture>
-    <h1>Order Summary</h1>
-    <div class="description">
-      <p>
-        You can now listen to millions of songs, audiobooks, and podcasts on any
-        device anywhere you like!
-      </p>
-    </div>
-    <div class="annual-plan">
-      <img src="images/icon-music.svg" alt="music icon">
-      <div class="prices">
-        <h2>Annual Plan</h2>
-        <p>$59.99/year</p>
+    <section>
+      <h1>Order Summary</h1>
+      <div class="description">
+        <p>
+          You can now listen to millions of songs, audiobooks, and podcasts on any
+          device anywhere you like!
+        </p>
       </div>
-
-      <button>Change</button>
-    </div>
-
-    <button class="payment-button">
-      Proceed to Payment
-    </button>
-    
-    <button class="cancel-button">
-      Cancel Order
-    </button>
+      <div class="annual-plan">
+        <img src="images/icon-music.svg" alt="music icon">
+        <div class="prices">
+          <h2>Annual Plan</h2>
+          <p>$59.99/year</p>
+        </div>
+  
+        <button>Change</button>
+      </div>
+  
+      <button class="payment-button">
+        Proceed to Payment
+      </button>
+      
+      <button class="cancel-button">
+        Cancel Order
+      </button>
+    </section>
   </main>
 </body>
 
